source/styling.less
/* ... */
/* -- icons ----------------------------------------------------------------- */

:root {

    &#messengerWindow[ait-frame-contents-preference="light"]
        svg:-moz-any([id|="ait-frame-toolset-button"], [id|="ait-tab-close"]),
    &#messengerWindow:-moz-any([ait-main-toolbox-preference="light"],
                               [ait-main-toolbox-preference="darker"]),
        svg:-moz-any([id|="ait-selected-tab-close"],
                     [id|="ait-pane-toolset-button"]),
    &:-moz-any(#calendar-event-dialog,
               #calendar-task-dialog,
               #addressbookWindow)[ait-frame-contents-preference="light"]
        svg[id|="ait-toolset-button"],
    &#messengerWindow[ait-lightning-side-pane-preference="light"]
        svg[id|="ait-lightning-side-pane"]
    &#messengerWindow[ait-lightning-main-view-preference="light"]
        svg[id|="ait-lightning-main-view"] {

        --ait-icon-color: var(--ait-light-text-color);

    }

    &#messengerWindow[ait-frame-contents-preference="dark"]
        svg:-moz-any([id|="ait-frame-toolset-button"], [id|="ait-tab-close"]),
    &#messengerWindow[ait-main-toolbox-preference="dark"]
        svg:-moz-any([id|="ait-selected-tab-close"],
                     [id|="ait-pane-toolset-button"]),
    &:-moz-any(#calendar-event-dialog,
               #calendar-task-dialog,
               #addressbookWindow)[ait-frame-contents-preference="dark"]
        svg[id|="ait-toolset-button"],
    &#messengerWindow[ait-lightning-side-pane-preference="dark"]
        svg[id|="ait-lightning-side-pane"],
    &#messengerWindow[ait-lightning-main-view-preference="dark"]
        svg[id|="ait-lightning-main-view"] {

        --ait-icon-color: var(--ait-dark-text-color);

    }

    &#messengerWindow[ait-frame-contents-preference="light"]
        svg[id|="ait-frame-toolset-searchbox"],
    &#messengerWindow:-moz-any([ait-main-toolbox-preference="light"],
                               [ait-main-toolbox-preference="darker"])
        svg[id|="ait-pane-toolset-searchbox"],
    &#addressbookWindow[ait-frame-contents-preference="light"]
        svg[id|="ait-toolset-searchbox"],
    &#messengerWindow[ait-lightning-main-view-preference="light"]
        svg[id|="ait-lightning-main-view-searhcbox"] {

        --ait-icon-color: var(--ait-light-text-input-icon-color);

    }

    &#messengerWindow[ait-frame-contents-preference="dark"]
        svg[id|="ait-frame-toolset-searchbox"],
    &#messengerWindow[ait-main-toolbox-preference="dark"]
        svg[id|="ait-pane-toolset-searchbox"],
    &#addressbookWindow[ait-frame-contents-preference="dark"]
        svg[id|="ait-toolset-searchbox"],
    &#messengerWindow[ait-lightning-main-view-preference="dark"]
        svg[id|="ait-lightning-main-view-searhcbox"] {

        --ait-icon-color: var(--ait-dark-text-input-icon-color);

    }

    &#messengerWindow svg {

        &[id|="ait-tab-hover-button-close"] {

            --ait-icon-color: var(--ait-red);

        }

        &[id|="ait-tab-active-button-close"] {

            --ait-icon-color: var(--ait-blue);

        }

        &:-moz-any([id|="ait-toolset-active-button"],
                   [id|="ait-frame-toolset-button"],
                   [id|="ait-pane-toolset-button"]) {

            &[id$="schedule-icon"] {

                transform: translateY(-1px);

            }

            &[id$="filter-icon"] {

                transform: scale(1.25, 1.25);

            }

        }

    }

    &:-moz-any(#calendar-event-dialog,
               #calendar-task-dialog,
               #addressbookWindow,
               #messengerWindow) svg[id|="ait-toolset-active-button"] {

        --ait-icon-color: var(--ait-button-active-text-color) !important;

    }


    &#addressbookWindow
        svg:-moz-any([id|="ait-toolset-active-button"],
                     [id|="ait-toolset-button"])[id$="write-icon"],
    &#messengerWindow svg:-moz-any(
        [id|="ait-toolset-active-button"],
        [id|="ait-frame-toolset-button"],
        [id|="ait-pane-toolset-button"]
    ):-moz-any([id$="filter-icon"], [id$="write-icon"]) {

        & path {

            stroke: var(--ait-icon-color);
            stroke-width: 0.8px;

        }

    }

}

svg[id|="ait"] {

    width: 16px;
    height: 16px;

    & :-moz-any(path, rect) {

        fill: var(--ait-icon-color);

    }

}

/* -- generic tweaks -------------------------------------------------------- */

:root#messengerWindow {

    &:not([ait-main-toolbox-preference="none"]) #contentTabBrowser0 {

        /* puts content windows (for ex. Add-ons Manager) on top to hide
           artifacts from the tab browser  */

        z-index: 2;
        position: relative;

    }

    &:not([ait-mails-main-view-preference="none"])
        #messagepane[src="about:blank"] {

        opacity: 0;

    }

}
/* ... */

